--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>today.</p>
       </div>
 
-      <img src="../Popop.jpg" alt="Profile Picture" class="profile">
+      <img src="Popop.jpg" alt="Profile Picture" class="profile">
     </div>
   </div>
   <script>
