--- a/about.html
+++ b/about.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <title>About Me</title>
+  <link rel="stylesheet" href="about.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Itim&family=Italiana&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -17,24 +17,39 @@
   </div>
 
   <div class="container">
-    <h1>MY PORTFOLIO</h1>
+
+    <h1>ABOUT ME</h1>
 
     <nav id="navMenu">
-      <a href="index.html" id="active-btn">Home</a>
-      <a href="about.html">About</a>
+      <a href="index.html">Home</a>
+      <a href="about.html" id="active-btn">About</a>
       <a href="contact.html">Contact Us</a>
     </nav>
 
     <div class="content">
+
       <div class="text">
-        <p>Hello, my name is Jhon Paul T. Saraña wanna</p>
-        <p>learn with purpose, innovate with vision, turn</p>
-        <p>ideas into reality, and shape tomorrow’s tech</p>
-        <p>today.</p>
+        <p>Hi! I'm Jhon Paul T. Saraña, an IT student. I love learning new IT skills and exploring web development.</p>
+
+        <h2>PROJECTS</h2>
+        <ul>
+          <li>Enrollment System</li>
+          <li>Water Billing System</li>
+          <li>Passport System</li>
+          <li>Cashiering System</li>
+        </ul>
+
+        <h2>TECH STACK</h2>
+        <div class="tech-stack">
+          <img src="c++.png" alt="C++ Logo" class="tech-icon">
+          <img src="php.png" alt="PHP Logo" class="tech-icon">
+        </div>
       </div>
 
       <img src="Popop.jpg" alt="Profile Picture" class="profile">
+
     </div>
+
   </div>
 
   <script>
