--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
-  
-  <div class="menu-toggle" onclick="toggleMenu()">
-    <i class="fas fa-bars"></i>
-  </div>
+  <div class="menu-toggle" onclick="toggleMenu()">☰</div>
 
   <div class="container">
     <h1>CONTACT US</h1>
@@ -29,7 +26,7 @@
         <p>If you want to reach out, feel free to message me anytime!</p>
 
         <p><i class="fa-solid fa-envelope"></i> Email: 
-          <a href="mailto:jhonpaulsarana21@gmail.com">jhonpaulsarana21@gmail.com</a>
+          <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">jhonpaulsarana21@gmail.com</a>
         </p>
 
         <p><i class="fa-brands fa-facebook"></i> Facebook: 
