--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Itim&family=Italiana&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
 
-  <div class="menu-toggle" onclick="toggleMenu()">
-    <i class="fas fa-bars"></i>
-  </div>
+  <div class="menu-toggle" onclick="toggleMenu()">☰</div>
 
   <div class="container">
+
     <h1>MY PORTFOLIO</h1>
 
     <nav id="navMenu">
@@ -35,6 +33,7 @@
 
       <img src="Popop.jpg" alt="Profile Picture" class="profile">
     </div>
+
   </div>
 
   <script>
