--- a/index.html
+++ b/index.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Itim&family=Italiana&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Itim&family=Italiana&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <div class="menu-toggle" onclick="toggleMenu()">☰</div>
 
-  <div class="container">
-    <h1>MY PORTFOLIO</h1>
+  <div class="container">
+    <h1>MY PORTFOLIO</h1>
 
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact Us</a>
-    </nav>
+    <nav id="navMenu">       <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Contact Us</a>
+    </nav>
 
-    <div class="content">
-      <div class="text">
-        <p>Hello, my name is Jhon Paul T. Saraña wanna<p>
-        <p>learn with purpose, innovate with vision, turn</p>
-        <p>ideas into reality, and shape tomorrow’s tech</p>
-        <p>today.</p>
-      </div>
+    <div class="content">
+      <div class="text">
+        <p>Hello, my name is Jhon Paul T. Saraña wanna</p> 
+        <p>learn with purpose, innovate with vision, turn</p>
+        <p>ideas into reality, and shape tomorrow’s tech</p>
+        <p>today.</p>
+      </div>
 
-      <img src="Popop.jpg" alt="Profile Picture" class="profile">
-    </div>
-  </div>
-  <script>
+      <img src="Popop.jpg" alt="Profile Picture" class="profile">
+    </div>
+  </div>
+  <script>
     
+    function toggleMenu() {
+      document.getElementById('navMenu').classList.toggle('show');
+    }
+</script>
 </body>
 </html>
