--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me</title>
   <link rel="stylesheet" href="about.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,6 +66,13 @@
       });
     });
   </script>
+
+
+<script>
+document.querySelector('.hamburger').addEventListener('click', function() {
+  document.querySelector('#nav-menu').classList.toggle('active');
+});
+</script>
 
 </body>
 </html>
