--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"
-  <title>Contact Us</title>
+  <title></title>
   <link rel="stylesheet" href="contact.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,14 +15,14 @@
   <header class="header-grid">
     <div class="container">
       <div class="menu-bar">
-        <h1>MY PORTFOLIO</h1>
+        <h1>CONTACT US</h1>
 
         <button class="hamburger" id="hamburger">&#9776;</button>
 
         <nav id="nav-menu">
-          <a href="index.html">HOME</a>
-          <a href="about.html">ABOUT</a>
-          <a href="contact.html" id="active-btn">CONTACT</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="contact.html" id="active-btn">Contact us</a>
         </nav>
       </div>
     </div>
